# rustboyadvance-ng

./: Cargo.toml  README.md  flake.nix
.git.bfg-report/2024-03-23/20-31-00/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.git.bfg-report/2024-03-23/20-31-00/protected-dirt/: c344087b-HEAD.csv
a/: Cargo.toml  build.rs
app/: Cargo.toml
app/msvc/32/: SDL2.dll.REMOVED.git-id
app/src/: cli.yml  main.rs  options.rs  video.rs
arm7tdmi/src/: cpu.rs  disass.rs
arm7tdmi/src/arm/: exec.rs
core/: Cargo.toml
core/arm7tdmi/src/: alu.rs
core/arm7tdmi/src/arm/: exec.rs
core/arm7tdmi/src/thumb/: exec.rs
core/arm7tdmi/utils/: Cargo.toml
core/src/: bios.rs  gba.rs  gdb_support.rs  iodev.rs  keypad.rs  mgba_debug.rs  sched.rs  sysbus.rs
core/src/cartridge/: builder.rs  mod.rs  rtc.rs
core/src/cartridge/backup/: backup_file.rs  eeprom.rs  flash.rs
core/src/gdb_support/: gdb_thread.rs
core/src/gpu/: layer.rs  mod.rs  mosaic.rs
core/src/gpu/render/: obj.rs  text.rs
core/src/sound/: interface.rs
img/: demo.gif.REMOVED.git-id  tonc_bigmap_demo.gif.REMOVED.git-id
platform/rustboyadvance-sdl2/: Cargo.toml
platform/rustboyadvance-sdl2/src/: audio.rs  main.rs  options.rs  video.rs
utils/src/: lib.rs
