[workspace]
members = [
    "core",
    "arm7tdmi",
    "utils",
    "platform/rustboyadvance-sdl2",
    "platform/rustboyadvance-libretro",
    "platform/rustboyadvance-wasm",
    "platform/rustboyadvance-jni",
    "fps_bench"
]
resolver = "1"
default-members = ["platform/rustboyadvance-sdl2"]

[profile.dev]
opt-level = 2
debug = true

[profile.release]
opt-level = 3
strip = true
codegen-units = 1

[profile.release-dev]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = false

[profile.release-lto]
inherits = "release"
lto = true
